# AMPF_GC

./: README.md  cp_bash
crazyflie/crazyswarm2/: READMINE.md
crazyswarm2/: README.md  ReadME.md
crazyswarm2/crazyflie/config/: crazyflies.yaml
cv_basics/: package.xml  setup.py
cv_basics/cv_basics/: zed_pointcloud.pub.py  zedcam_sub.py  zeddepth_crop.py
formation_controller/: CMakeLists.txt  package.xml
formation_controller/config/: param.yaml
formation_controller/include/formation_controller/: desired_formation.hpp  follower1_controller.hpp  follower2_controller.hpp
formation_controller/launch/: follower1.launch.py  formation_controller.launch.py
formation_controller/src/: ampf_df.cpp  ampf_gb_f1.cpp  desired_formation.cpp  follower1_controller.cpp  follower2_controller.cpp
formation_experiment/: CMakeLists.txt  package.xml
formation_experiment/config/: param.yaml  param_f1.yaml  param_f2.yaml
formation_experiment/include/formation_experiment/: aruco_help.hpp
formation_experiment/launch/: experiment.launch.py  follower2.launch.py  formation.launch.py
formation_experiment/launch/old/: follower1.launch.py  follower1_test.launch.py  follower2_localization_test.launch.py  formation.launch.py  param.yaml
formation_experiment/src/: aruco_help.cpp
formation_simulation/: package.xml  setup.cfg  setup.py
formation_simulation/formation_simulation/: sim_publisher.py
formation_simulation/launch/: basic_robot_cf.py  basic_robot_f1.launch.py  basic_robot_f2.py  pltjug.launch.py  robot.launch.py  robot_launch.py  test.py
formation_simulation/resource/: crazyflie_webots.urdf  ros2control.yml
formation_simulation/worlds/: TurtleBot3Burger.proto  turtlebot3_burger_example.wbt
my_interfaces/: CMakeLists.txt
my_interfaces/msg/: Follower2Info.msg  PolarCoor.msg
my_serialpy/: package.xml  setup.cfg  setup.py
my_serialpy/my_serialpy/: uwb_node.py  uwb_publisher.py
my_yolo_wrapper/: cmd.txt  package.xml  setup.cfg  setup.py
my_yolo_wrapper/config/: param.yaml
my_yolo_wrapper/expired/: multi_yolo_wrapper.launch.py  my_launch_template.launch.py  my_yolo.py
my_yolo_wrapper/launch/: multi_boundingbox.launch.py
my_yolo_wrapper/my_yolo_wrapper/: boundingbox_node.py  boundingbox_publisher.py  my_yolo.py
my_yolo_wrapper_interfaces/: CMakeLists.txt  package.xml
my_yolo_wrapper_interfaces/msg/: BoundingBox.msg  PolarCoor.msg
pcl_basics/: CMakeLists.txt  cmd.txt  package.xml
pcl_basics/config/: param.yaml
pcl_basics/launch/: multi_pcl.launch.py
pcl_basics/src/: leader_distangle.cpp  pcl_test.cpp
sensing/bounding_box/: cmd.txt  package.xml  setup.cfg  setup.py
sensing/bounding_box/bounding_box/: bounding_box_node.py  bounding_box_publisher.py
sensing/bounding_box/config/: param.yaml
sensing/bounding_box/launch/: bounding_box.launch.py
sensing/cv_basics/: package.xml
sensing/cv_basics/cv_basics/: webcam_pub.py  zed_pointcloud.pub.py  zeddepth_sub.py
sensing/point_cloud_processing/: CMakeLists.txt  cmd.txt  package.xml
sensing/point_cloud_processing/config/: param.yaml
sensing/point_cloud_processing/include/point_cloud_processing/: point_cloud_processing.hpp
sensing/point_cloud_processing/launch/: point_cloud_processing.launch.py
sensing/point_cloud_processing/src/: point_cloud_processing.cpp
sensing/uwb/config/: param.yaml
sensing/uwb/uwb/: uwb_publisher.py
sensing/yolov8/: crazyflie_v8.yaml  track_ex.py  yolov8_track_webcam.py  yolov8_train.py  yolov8_webcam.py
sensing/yolov8/crazyflie_data/: README.dataset.txt  README.roboflow.txt  data.yaml
sensing/yolov8/crazyflie_data/test/labels/: fly_converted_left_mp4-109_jpg.rf.96e1be9f08490562f005dc6d24af3b66.txt  fly_converted_left_mp4-110_jpg.rf.fda110857863d93a9e1f9bd3258f028d.txt  fly_converted_left_mp4-120_jpg.rf.a7c272f509a379a1f5a470b1a9a00f4f.txt  fly_converted_left_mp4-12_jpg.rf.6e25717001c80c45ea4d37b69ad7b3d8.txt  fly_converted_left_mp4-13_jpg.rf.f636603de045d643872a263cc05de89c.txt  fly_converted_left_mp4-149_jpg.rf.b7dbff3522da7903184a074879659cc9.txt  fly_converted_left_mp4-152_jpg.rf.8fd7f97876659fb5ce1c482e7a199aa5.txt  fly_converted_left_mp4-162_jpg.rf.f079de91752990e101fea6c8a42f303f.txt  fly_converted_left_mp4-23_jpg.rf.0ba4b3d0a6fa9a4eef42303d77efd92e.txt  fly_converted_left_mp4-31_jpg.rf.93fde37fa486ccb0e1e1ecd09b8e4c68.txt  fly_converted_left_mp4-56_jpg.rf.addd88799ec533b8b77488f2f7d2fa10.txt  fly_converted_left_mp4-89_jpg.rf.e9cd181c88cb8df980d2cd4fd0950cc9.txt  fly_converted_left_mp4-8_jpg.rf.c49d62a6b7d57ffd7bcb3253124181c5.txt  fly_converted_left_mp4-91_jpg.rf.34eaba7115b7e794e81f83e59370a227.txt  fly_converted_right_mp4-101_jpg.rf.5addc3b5004c93a4cd2f8c3ccdef5c11.txt  fly_converted_right_mp4-102_jpg.rf.b9b646f5f73294c5cb1feca19ea6c66f.txt  fly_converted_right_mp4-105_jpg.rf.9a0646609323a7596e38b72e17a605b1.txt  fly_converted_right_mp4-125_jpg.rf.181115f55316a6a80d5c978fc7ae4b16.txt  fly_converted_right_mp4-128_jpg.rf.8be68713b52a1dd17cd4352ab718b958.txt  fly_converted_right_mp4-130_jpg.rf.98a5edec048c5e7b35de757592142b07.txt  fly_converted_right_mp4-135_jpg.rf.9b352f53c155eba7a5a02c9034cf4a8a.txt  (+37 more)
sensing/yolov8/crazyflie_data/train/: labels.cache
sensing/yolov8/crazyflie_data/valid/: labels.cache
sensing/yolov8/red_crazyflie_data/: README.dataset.txt  README.roboflow.txt  data.yaml
sensing/yolov8/red_crazyflie_data/train/: labels.cache
sensing/yolov8/red_crazyflie_data/valid/: labels.cache
sensing/zed-ros2-wrapper/zed_wrapper/launch/: zed2i.launch.py  zed2i_ip.launch.py
sensing/zed_yolo/: package.xml  setup.py
sensing/zed_yolo/zed_yolo/: zed_yolo_node.py  zed_yolo_publisher.py
sensing/zed_yolo_python/: cmd.txt  zed_recording_overwifi.py  zed_yolo.py
yolov8/runs/detect/epoch5/: results.csv
yolov8/runs/detect/epochs100/: args.yaml
zed-ros2-examples/tutorials/: READMINE.md
zed-ros2-examples/tutorials/zed_multi_camera/launch/: cmd.txt  zed_multi_camera_ip.launch.py
zed-ros2-wrapper/: READMINE.md
zed-ros2-wrapper/zed_wrapper/config/: common.yaml  zed2i.yaml
zed-ros2-wrapper/zed_wrapper/launch/: zed2i_ip.launch.py
(+1778 files in other folders)
